--- a/src/app/staffpage/staffpage.component.html
+++ b/src/app/staffpage/staffpage.component.html
@@ -4,13 +4,19 @@
         <div id="logo-text">
             <a>
                 <img src="../../../assets/images/tut.png" alt="SMART FARM"
-                    style="float: left;height: 72px;width: 225px;" routerLink="read">
+                    style="float: right;height: 72px;width: 225px;" routerLink="read">
             </a>
         </div>
         <div id="menu-icon">
             <i class="fas fa-bars"></i>
         </div>
-
+        <ul>
+            <li>
+                <a href="#" class="nav-link active" id="ModalExample" (click)="logout()">
+                    <button type="button" class="btn btn-success">LOGOUT</button>
+                </a>
+            </li>
+        </ul>
     </nav>
 </div>
 
@@ -37,13 +43,7 @@
             </ul>
 
 
-            <ul>
-                <li>
-                    <a href="#" class="nav-link active" id="ModalExample" (click)="logout()">
-                        <button type="button" class="btn btn-success">LOGOUT</button>
-                    </a>
-                </li>
-            </ul>
+           
 
 
         </nav>
@@ -153,7 +153,7 @@
                         <div class="mb-3 
                         d-flex justify-content-centre">
                             <button type="submit" (click)="clear()" (click)="request()"
-                                class="btn btn-primary px-3 rounded-3">
+                                class="btn btn-primary px-3 rounded-3 ">
                                 Submit
                             </button>
                         </div>
