--- a/src/app/track-request/track-request.component.css
+++ b/src/app/track-request/track-request.component.css
@@ -46,7 +46,7 @@
   /*logout button*/
   .btn-success{
     color: white;
-    border: 2px solid white;
+    border: none;
     height: 40px;
     background-color: #005596;
   }
@@ -58,10 +58,11 @@
   /* Start of  Everything on the side nav*/
   .sideNav {
     float: left;
-   
-    box-shadow: 5px 0 2px #969292;
+/*    
+    box-shadow: 5px 0 2px #969292; */
     width: 335px;
     height: 1055px;
+    background-color: #0c0c0c;
     
   }
   .breadcrumbNav {
@@ -249,6 +250,25 @@ label {
     color: green;
     background-color: white;
 
+}
+.reqhead1{
+  
+  border: 2px solid rgb(255, 255, 255);
+  background-color: #ECE7E7; 
+  font-weight: bold;
+
+
+
+
+font-family: 'Sansation';
+font-style: normal;
+font-weight: 700;
+font-size: 32px;
+line-height: 36px;
+letter-spacing: 0.15em;
+margin-left: 400px;
+padding-top: 2px;
+color: #000000;
 }
 
 
