--- a/src/app/track-request/track-request.component.html
+++ b/src/app/track-request/track-request.component.html
@@ -3,12 +3,17 @@
         <div id="logo-text">
             <a>
                 <img src="../../../assets/images/tut.png" alt="SMART FARM"
-                    style="float: left;height: 72px;width: 225px;" routerLink="read">
+                    style="float: right;height: 72px;width: 225px;" routerLink="read">
             </a>
         </div>
         <div id="menu-icon">
             <i class="fas fa-bars"></i>
         </div>
+        <li>
+            <a href="#" class="nav-link active" id="ModalExample" (click)="logout()">
+                <button type="button" class="btn btn-success">LOGOUT</button>
+            </a>
+        </li>
 
     </nav>
 </div>
@@ -35,18 +40,19 @@
                 </ul>
    
                 <ul>
-                    <li>
+                    <!-- <li>
         
                         <a href="#" class="nav-link active" id="ModalExample" (click)="logout()"><button type="button"
                                 class="btn btn-success">LOGOUT</button></a>
-                    </li>
+                    </li> -->
                 </ul>
     
             </nav>
         </div>
     <div class="contentContainerRight">
         <div class="backFrom" >
-            <h3 class="toptitle">Staff Track Request</h3>
+            <!-- <h3 class="toptitle">Staff Track Request</h3> -->
+            <div class="reqhead1">SEND REQUEST</div>
         </div>
         <div class="stats d-flex justify-content-left px-4">
         <form>
