--- a/public/app/adminpage/adminpage.component.html
+++ b/public/app/adminpage/adminpage.component.html
@@ -34,6 +34,10 @@
                     <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="/adminprogress">View Progress</a></li>
                     <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="/admincloselog">Close Logs</a></li>
                     <li class="" id="breadcrumbpaddingreport"><a class="" id="hover" href="#" routerLink="/generatereport">Generate Report</a></li>
+                    <li class="" id="breadcrumbpaddingreport"><a class="" id="hover" href="#" routerLink="/viewAvailableTech">Available Techncian</a></li>
+                    
+            
+
                     
                         
                         
