--- a/src/app/adminpage/adminpage.component.html
+++ b/src/app/adminpage/adminpage.component.html
@@ -33,6 +33,7 @@
                     <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="" disabled>View Logs</a></li>
                     <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="/adminprogress">View Progress</a></li>
                     <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="/admincloselog">Close Logs</a></li>
+                     <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="/btnAvailableTech">Techncians</a></li>
                     <!-- <li class="" id="breadcrumbpaddingreport"><a class="" id="hover" href="#" routerLink="/generatereport">Generate Report</a></li> -->
                     
                         
