--- a/src/app/technician-table/technician-table.component.html
+++ b/src/app/technician-table/technician-table.component.html
@@ -60,11 +60,9 @@
                               <th scope="col">Surname</th>
                               <th scope="col">Phone</th>
                               <th scope="col">Email</th>
-                              <th scope="col">Gender</th>
                               <th scope="col">Available</th>
-                              <th scope="col">Division_ID</th>
+                              <th scope="col">Division_Name</th>
                               <th scope="col">Campus</th>
-                              <th scope="col">Password</th>
                             </tr>
                           </thead>
                           <tbody>
@@ -73,12 +71,11 @@
                               <td>{{ technician.name }}</td>
                               <td>{{ technician.surname }}</td>
                               <td>{{ technician.phone }}</td>
-                              <td>{{ technician.email }}</td>
-                              <td>{{ technician.gender }}</td>
+                              <td>{{ technician.email }}</td>  
                               <td>{{ technician.availability }}</td>
-                              <td>{{ technician.division_id }}</td>
+                              <td>{{ technician.division_name }}</td>
                               <td>{{ technician.campus}}</td>
-                              <td>{{ technician.password }}</td>
+                              
 
                               <td class="status">{{data.status}}</td>
                               <!-- <td><button type="button" class="logbtn" (click)="log($event,data.id)" [(ngModel)]="data.status">Log</button> </td> -->
