updating css for table

--- a/src/app/technician-table/technician-table.component.html
+++ b/src/app/technician-table/technician-table.component.html
@@ -6,7 +6,7 @@
                   <a>
                    
                       <img class="logo" src="../../../assets/images/tut.png" alt="SMART FARM"
-                          style="float: left;height: 70px;width: 225px;" routerLink="read">
+                          style="float: right;height: 70px;width: 225px;" routerLink="read">
                   </a>
               </div>
               <div id="menu-icon">
