--- a/src/app/admindashboard/admindashboard.component.html
+++ b/src/app/admindashboard/admindashboard.component.html
@@ -1,4 +1,4 @@
-
+<!-- navbar -->
 <div class="topNav">
     <!-- <body class="container"> -->
         <div class="log d-flex justify-content-end">
@@ -25,14 +25,13 @@
         </div>
 </div>
 <body>
-
+ <!-- side nav -->
     <div class="container2 d-flex justify-content-between ">
         <div class="sideNav">
             <nav class="breadcrumbNav">
                 <ul>
                     <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="/adminpage">View Logs</a></li>
-                    <!-- <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="/adminprogress">View Progress</a></li>
-                    <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="/admincloselog">Close Logs</a></li> -->
+                   
                     
                         <div class="dropdown">
                             <button class="dropbtn">Report</button>
@@ -42,15 +41,7 @@
                               <a class="nav-link active" id="ModalExample">Closed Tasks</a>
                             </div>
                         </div>
-                        <!-- <div class="logstats"  *ngIf= "statsData">
-                            <h3 class="averageTitle"  >Tasks Average</h3>
-                            <label class="unassigned">Unassigned Tasks&nbsp;&nbsp;<span class="numberStats">{{statsData.totalUnassigned}}</span></label>
-                            <label class="pendingTasks">Pending Tasks &nbsp;&nbsp;<span class="numberStats">{{statsData.averagePending}}%</span></label>
-                            <label class="In-progressTasks">In-progress &nbsp;&nbsp;<span class="numberStats">{{statsData.averageInProgress}}%</span></label>
-
-                            <label class="completedTasks">Completed &nbsp;&nbsp;<span class="numberStats">{{statsData.averageInProgress}}%</span></label>
-                            <label class="ClosedTasks">Closed &nbsp;&nbsp;<span class="numberStats">{{statsData.averageInProgress}}%</span></label>
-                        </div> -->
+                       
                 </ul>
             </nav>
         </div>
