--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -8,17 +8,17 @@
                           style="float: left;height: 70px;width: 225px;" routerLink="read" />
                   </a>
               </div>
-              <div id="menu-icon">
+              <!-- <div id="menu-icon">
                   <i class="fas fa-bars"></i>
-              </div>
+              </div> -->
               <ul>
                 <div class="dropdown">
-                  <button class="dropbtn">REQUEST</button>
+                  <button class="dropbtn">SIGN IN</button>
                   <div class="dropdown-content">
                     <a class="nav-link active" id="ModalExample" (click)="openForm()">Log Complaint</a>
-                  </div>
-                </div>
-                  <li>
+
+
+                    <li>
                       <a class="nav-link active" id="ModalExample" (click)="openLogin()">ADMIN</a>
                   </li>
                   <li>
@@ -27,6 +27,9 @@
                   <li>
                     <a class="nav-link active" id="ModalExample" (click)="openTech()">TECHNICIAN</a>
                   </li>
+                  </div>
+                </div>
+                 
                   
               </ul>
       
@@ -45,7 +48,7 @@
    
 <div id="banner">
     <h1>Technical Services</h1>
-    <h3>We Can Help You Fix All Of Your Technical Problems</h3>
+    <!-- <h3>We Can Help You Fix All Of Your Technical Problems</h3> -->
 </div> 
     <section id="about">
       <div id="about-text">
