--- a/src/app/admincloselog/admincloselog.component.css
+++ b/src/app/admincloselog/admincloselog.component.css
@@ -20,6 +20,19 @@ body {
     box-sizing: border-box;
     z-index: 100;
   }
+  .dropbtn {
+    background-color:white ;
+   
+    border-radius: 5px;
+    height: 50px;
+    color: black;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    padding-left: 45px;;
+    padding-right: 45px;
+    font-weight: bold;
+  }
   .header a {
     padding: 0 32px;
     color: #eee;
