--- a/src/app/adminprogress/adminprogress.component.css
+++ b/src/app/adminprogress/adminprogress.component.css
@@ -21,6 +21,19 @@
     box-sizing: border-box;
     z-index: 100;
   }
+  .dropbtn {
+    background-color:white ;
+   
+    border-radius: 5px;
+    height: 50px;
+    color: black;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    padding-left: 45px;;
+    padding-right: 45px;
+    font-weight: bold;
+  }
   
 .header a {
     padding: 0 32px;
