--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -40,7 +40,7 @@
 
 #logoDiv {
 
-  margin-left: 0.35%;
+  margin-left: 5%;
   margin-top: 7.2px;
 
 }
@@ -120,12 +120,17 @@ a {
 }
 
 .dropbtn {
-  width: 100px;
-  padding: 5px;
-  border-radius: 8px;
-  color: white;
-  border: 1px solid white;
-  background-color: #005596;
+  background-color:white ;
+ 
+  border-radius: 5px;
+  height: 50px;
+  color: black;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  padding-left: 45px;;
+  padding-right: 45px;
+  font-weight: bold;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -306,6 +311,7 @@ a {
   border-radius: 30px;
   box-shadow: 3px 3px 10px rgb(188, 188, 188);
   padding: 0px 20px 20px 20px;
+  /* display: flex; */
 }
 
 .report-header {
@@ -340,26 +346,45 @@ a {
 }
 
 .report-body {
-  max-width: 1160px;
-  overflow-x: auto;
+  /* max-width: 300px; */
+  /* overflow-x: auto; */
   padding: 20px;
+  display: flex;
+
+
 }
 
 .report-topic-heading,
 .item1 {
   width: 1120px;
-  display: flex;
+  /* display: flex; */
   justify-content: space-evenly;
+  
+}
+/* .report-topic-heading{
+  padding-right: 7%;
+} */
+.progress{
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  padding: 0;
+  margin-bottom: 10px;
 }
 
+
 .t-op {
-  font-size: 18px;
+  font-size: 16px;
   letter-spacing: 0px;
 }
 
 .items {
   width: 1120px;
-  margin-top: 15px;
+  margin-top: 0px;
+  margin-left: auto;
+  margin-right: auto;
+  
+ 
 }
 
 .item1 {
@@ -418,7 +443,7 @@ footer {
   .report-topic-heading,
   .item1,
   .items {
-    width: 800px;
+    width: fit-content;
   }
 }
 
@@ -435,10 +460,15 @@ footer {
     font-size: 20px;
   }
 
-  .report-topic-heading,
-  .item1,
+  /* .report-topic-heading,
+  .item1, */
   .items {
-    width: 700px;
+    width: fit-content;
+    padding-left: 1000px;
+  }
+
+  .report-topic-heading{
+    padding-right: 60px;
   }
 
   .navcontainer {
@@ -525,7 +555,7 @@ footer {
   .report-topic-heading,
   .item1,
   .items {
-    width: 550px;
+    width: fit-content;
   }
 }
 
@@ -577,11 +607,12 @@ footer {
   .report-topic-heading,
   .item1,
   .items {
-    width: 300px;
+    width: fit-content;
   }
 
   .report-body {
     padding: 10px;
+   
   }
 
   .label-tag {
