--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,13 +10,13 @@
           <br>
         
           <label class="d-block mb-4">
-            <span class="form-label d-block" class="row mx-0 justify-content-center">Admin Email</span>
+            <span class="form-label d-block" class="row mx-0 justify-content-center">Admin ID</span>
             <br>
             <input
             [(ngModel)]="adminLogin.admin_id" name="adminLogin.admin_id"
               type="text"
               class="form-control"
-              placeholder="Email address"
+              placeholder="Admin ID"
             />
           </label>
 
