--- a/src/app/staffsendrequest/staffsendrequest.component.html
+++ b/src/app/staffsendrequest/staffsendrequest.component.html
@@ -1,6 +1,7 @@
 
 <div class="container-fluid">
     <!-- <body class="container"> -->
+        <!-- nav bar -->
         <div class="log d-flex justify-content-end">
             <nav class="header">
                 <div id="logoDiv">
@@ -23,9 +24,12 @@
             </nav>
         </div>
 </div>
+
+
 <body>
 
     <div class="container2 d-flex justify-content-between ">
+       
         <div class="sideNav">
             <nav class="breadcrumbNav">
                 <ul>
@@ -34,6 +38,7 @@
                 </ul>
             </nav>
         </div>
+
         <div class="tab-content ps-5" id="myTabContent">
             <div class="tab-pane fade show active" id="formContent" role="tabpanel" aria-labelledby="doing-tab">
     
